--- a/tools/extension/manifest.json
+++ b/tools/extension/manifest.json
@@ -32,5 +32,10 @@
             "128": "image/icon/128.png"
           }
     },
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+    "web_accessible_resources": [
+      "image/send.png",
+      "image/like.png",
+      "image/ad.jpg"
+    ]
   }
